--- a/weather-app-react/src/components/current-weather/current-weather.css
+++ b/weather-app-react/src/components/current-weather/current-weather.css
@@ -2,7 +2,7 @@
   display: flex;
   font-size: 18px;
   font-weight: 500;
-  width: 100%;
+  width: 60%;
   border-radius: 6px;
   color: #efefef;
   background-color: #171616;
@@ -51,18 +51,23 @@
   margin: 5px 0;
   align-items: center;
   display: flex;
+  font-family: "Times New Roman", Times, serif;
 }
 .humidity,
+.pressure,
 .wind-speed {
+  padding: 5px 0;
+  display: flex;
   justify-content: space-between;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 600;
 }
 .weather-details {
+  padding: 5px 0;
+  display: flex;
   flex-direction: column;
   align-items: center;
   width: 80%;
-  display: flex;
   justify-content: space-between;
   margin-top: 5px 0;
 }
